<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.openresearchinc.hadoop</groupId>
	<artifactId>bin2seq</artifactId>
	<version>0.1</version>

	<repositories>
		<repository>
			<id>clojars.org</id>
			<url>http://clojars.org/repo</url>
		</repository>
	</repositories>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<includes>
					<include>*.xml</include>
					<include>*.properties</include>
					<include>*.png</include>
					<include>*.ppm</include>
					<include>*.nc</include>
					<include>*.h5</include>
					<include>*.hdf</include>
					<include>*.tif</include>
					<include>*.bil</include>
				</includes>
			</resource>
		</resources>
		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<source>1.7</source>
						<target>1.7</target>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-site-plugin</artifactId>
					<version>2.3</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<configuration>
						<forkMode>once</forkMode>
						<workingDirectory>target</workingDirectory>
						<!-- add native library paths to LD_LIBRARY_PATH, e.g., -->
						<!-- libjhdf5.so is /usr/lib/jni (Ubuntu) /usr/lib64/jhdf5 (amzn Linux) -->
						<argLine>-Xmx6G -XX:MaxPermSize=128M -XX:+UseCompressedOops
							-Djava.library.path=${env.HADOOP_HOME}/lib/native:${env.LD_LIBRARY_PATH}:/usr/lib/jni:${basedir}/lib</argLine>
						<additionalClasspathElements>
						</additionalClasspathElements>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<hadoop.version>2.4.0</hadoop.version> <!-- Hadoop version obtained from command $hadoop version -->
	</properties>

	<dependencies>
		<dependency>
			<groupId>ratel</groupId>
			<artifactId>gdal</artifactId>
			<version>1.9.1</version>
		</dependency>
		<dependency>
			<groupId>org.bytedeco</groupId>
			<artifactId>javacv</artifactId> <!-- get the native lib by $apt-get install libopencv2.4-jni -->
			<version>0.8</version> <!-- if using the latest(0.9), need to download the prebuilt native lib from -->
		</dependency>
		<dependency>
			<groupId>org.apache.spark</groupId>
			<artifactId>spark-core_2.10</artifactId>
			<version>0.9.2</version> <!-- TODO: 1.1.0 be the latest -->
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-compress</artifactId>
			<version>1.9</version>
		</dependency>
		<dependency>
			<groupId>org.hdfgroup</groupId>
			<artifactId>hdf-java</artifactId>
			<version>2.6.1</version>
		</dependency>
		<dependency>
			<groupId>edu.ucar</groupId>
			<artifactId>netcdf</artifactId>
			<version>4.2</version>
		</dependency>

		<!-- Test -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>

		<!-- AWS -->
		<dependency>
			<groupId>com.amazonaws</groupId>
			<artifactId>aws-java-sdk-s3</artifactId>
			<version>1.9.6</version>
		</dependency>
		<dependency>
			<groupId>net.java.dev.jets3t</groupId>
			<artifactId>jets3t</artifactId>
			<version>LATEST</version>
		</dependency>

		<!-- Hadoop -->
		<dependency> <!-- to have CBZip2InputStream etc. -->
			<groupId>org.apache.ant</groupId>
			<artifactId>ant</artifactId>
			<version>1.9.4</version>
		</dependency>
		<dependency>
			<groupId>org.apache.hadoop</groupId>
			<artifactId>hadoop-common</artifactId>
			<version>${hadoop.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.hadoop</groupId>
			<artifactId>hadoop-client</artifactId>
			<version>${hadoop.version}</version>
		</dependency>
	</dependencies>
</project>
